# Reader-service

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0c36f56441f7_first_init.py  c1d638056fa2_initial_migration.py  e185fab7898b_fix_foreign_key_cascade.py
app/application/dto/: book_service_dto.py
app/application/dto/reading_progress/: reading_progress_dto.py
app/application/dto/user_book/: user_book_dto.py
app/application/interfaces/: get_book_service.py  uow.py
app/application/usecase/reading_progress/: upsert_reading_progress.py
app/application/usecase/user_book/: add_user_book.py  get_user_book.py  list_user_book.py  remove_user_book.py  update_user_book.py
app/domain/entity/: reading_progress.py  user_book.py
app/domain/exception/: user_book.py
app/domain/protocols/: reading_progress_protocol.py  user_book_protocol.py
app/domain/value_object/: reading_progress.py  user_book_vo.py
app/infrastructure/: di.py
app/infrastructure/config/: config.py
app/infrastructure/database/: engine.py  session.py  uow.py
app/infrastructure/mappers/: reading_progress_mapper.py  user_book_mapper.py
app/infrastructure/models/: reading_progress.py  user_book.py
app/infrastructure/repositories/: reading_progress_repo.py  user_book_repo.py
app/infrastructure/service/: book_service.py
app/presentation/api/: depends.py
app/presentation/schemas/reading_progress/: reading_progress_schemas.py
app/presentation/schemas/user_book/: user_book_schemas.py
(+2 files in other folders)
