[project]
name = "reader-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Squilix01",email = "Squilix01@no-reply.com"}
]
readme = "README.md"
requires-python =">=3.12, <4.0"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "fastapi[all] (>=0.118.0,<0.119.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
